<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgray" >

    <EditText
        android:id="@+id/endreFornavn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:ems="12"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:hint="@string/fornavn" >
    </EditText>

    <EditText
        android:id="@+id/endreEtternavn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/endreFornavn"
        android:layout_below="@+id/endreFornavn"
        android:layout_marginTop="26dp"
        android:ems="12"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:hint="@string/etternavn" />

    <ImageButton
        android:id="@+id/endre"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:background="@color/green"
        android:src="@drawable/check"
        android:contentDescription="@string/app_name" />

    <ImageView
        android:id="@+id/addperson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/editlarge" />

    <EditText
        android:id="@+id/endreNummer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/endreEtternavn"
        android:layout_below="@+id/endreEtternavn"
        android:layout_marginTop="29dp"
        android:ems="11"
        android:hint="@string/nummer"
        android:inputType="phone"
        android:textColor="@color/white" />

    <ImageButton
        android:id="@+id/addnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/endreNummer"
        android:layout_toLeftOf="@+id/endreNummer"
        android:background="@color/darkgray"
        android:contentDescription="@string/app_name"
        android:src="@drawable/plus" />

</RelativeLayout>
